# dug-std-rs-llib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  meta-run-all.sh  publish.sh  remove-outputs.sh  vm-test-build-copy.sh  zip-example-wasm.sh
contracts/benchmarks/large-storage/: Cargo.toml
contracts/benchmarks/large-storage/meta/: Cargo.toml
contracts/benchmarks/large-storage/src/: large_storage.rs
contracts/benchmarks/large-storage/tests/: large_storage_scenario_go_test.rs  large_storage_scenario_rs_test.rs
contracts/benchmarks/large-storage/wasm/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/meta/: Cargo.toml
contracts/benchmarks/send-tx-repeat/src/: send_tx_repeat.rs
contracts/benchmarks/send-tx-repeat/tests/: scenario_go_test.rs  scenario_rs_test.rs
contracts/benchmarks/send-tx-repeat/wasm/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/meta/: Cargo.toml
contracts/benchmarks/str-repeat/src/: str_repeat.rs
contracts/benchmarks/str-repeat/tests/: scenario_go_test.rs  scenario_rs_test.rs
contracts/benchmarks/str-repeat/wasm/: Cargo.toml
contracts/core/price-aggregator/: Cargo.toml
contracts/core/price-aggregator/meta/: Cargo.toml
contracts/core/price-aggregator/src/: events.rs  lib.rs  median.rs  price_aggregator_data.rs  staking.rs
contracts/core/price-aggregator/tests/: price_aggregator_blackbox_test.rs  price_aggregator_whitebox_test.rs
contracts/core/price-aggregator/wasm/: Cargo.toml
contracts/core/wegld-swap/: Cargo.toml  README.md
contracts/core/wegld-swap/interaction/: snippets.sh
contracts/core/wegld-swap/meta/: Cargo.toml
contracts/core/wegld-swap/scenarios/: unwrap_egld.scen.json  unwrap_moa.scen.json  wrap_egld.scen.json  wrap_moa.scen.json
contracts/core/wegld-swap/src/: wegld.rs
contracts/core/wegld-swap/tests/: scenario_go_test.rs  wegld_swap_scenario_rs_test.rs
contracts/core/wegld-swap/wasm/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/meta/: Cargo.toml
contracts/examples/bonding-curve-contract/src/: function_selector.rs  (+1 more)
contracts/examples/crowdfunding-esdt/: Cargo.toml
contracts/examples/crypto-zombies/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml  README.md
contracts/examples/esdt-transfer-with-fee/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/fractional-nfts/: Cargo.toml
contracts/examples/multisig/: Cargo.toml  README.md
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/rewards-distribution/: Cargo.toml
contracts/examples/seed-nft-minter/: Cargo.toml
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/big-float-features/: Cargo.toml
contracts/feature-tests/formatted-message-features/: Cargo.toml
contracts/modules/: Cargo.toml  README.md
contracts/modules/src/: claim_developer_rewards.rs  default_issue_callbacks.rs  dns.rs  esdt.rs  features.rs  ongoing_operation.rs  only_admin.rs  pause.rs  staking.rs  transfer_role_proxy.rs  users.rs
data/codec/: Cargo.toml  README.md
data/codec-derive/: Cargo.toml  README.md
data/codec/src/: lib.rs
data/codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_wrapped_array.rs
framework/base/: Cargo.toml  README.md
framework/base/src/: external_view_contract.rs  lib.rs  macros.rs
framework/base/tests/: formatter_test.rs
framework/derive/: Cargo.toml  README.md
framework/derive/src/: contract_impl.rs  macro_proxy.rs  managed_vec_item_derive.rs  type_abi_derive.rs
framework/scenario/: Cargo.toml  README.md
framework/scenario/src/: bech32.rs  display_util.rs  lib.rs  main.rs  managed_test_util.rs  scenario_macros.rs  whitebox_legacy.rs
framework/scenario/tests/: big_int_test.rs  contract_call_test.rs  contract_without_macros.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_esdt_token_payment_test.rs  derive_managed_vec_item_simple_enum.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  esdt_token_payment_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_value_encoded_test.rs  path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  single_tx_api_test.rs  static_buffer_ref_test.rs  test_crypto.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_identifier_test.rs
framework/snippets/: Cargo.toml  README.md
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_multi_sc_exec.rs  interactor_multi_sc_process.rs  interactor_retrieve.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sc_extra.rs  interactor_sc_transfer.rs  interactor_sender.rs  interactor_tx_spec.rs  interactor_vm_query.rs  lib.rs  step_buffer.rs
framework/wasm-adapter/: Cargo.toml  README.md
framework/wasm-adapter/src/: lib.rs  panic.rs  wasm_alloc.rs  wasm_macros.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/tests/: interpreter_test.rs  reconstructor_tests.rs
vm/: Cargo.toml  README.md
vm/src/: lib.rs  mem_conv.rs
vm/src/tx_execution/: blockchain_vm.rs  exec_contract_endpoint.rs
vm/src/vm_hooks/: vh_dispatcher.rs
vm/src/world_mock/: blockchain_mock.rs  dct_instance.rs  dct_instance_metadata.rs  esdt_instance.rs  esdt_instance_metadata.rs  failing_executor.rs
(+967 files in other folders)
