[package]
name = "dharitri-sc-modules"
version = "0.43.3"
edition = "2021"

authors = ["dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "dharitri WebAssembly standard smart contract modules"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["dharitri-sc/alloc"]

[dependencies.dharitri-sc]
version = "0.43.3"
path = "../../framework/base"
