[package]
name = "dharithri-sc"
version = "0.43.3"
edition = "2021"

authors = ["viswanath <contact@dharithri.org>", "dharithri <contact@dharithri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "dharithri smart contract API"
keywords = ["dharithri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["dharithri-sc-codec/num-bigint"]
alloc = ["dharithri-sc-codec/alloc"]
promises = []
managed-map = []
esdt-token-payment-legacy-decode = []

[dependencies]
hashbrown = "0.13.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.dharithri-sc-derive]
version = "=0.43.3"
path = "../derive"

[dependencies.dharithri-sc-codec]
version = "=0.18.1"
path = "../../data/codec"
features = ["derive"]
