[package]
name = "dharitri-sc"
version = "0.43.3"
edition = "2021"

authors = ["viswanath <contact@dharitri.org>", "dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "dharitri smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["dharitri-sc-codec/num-bigint"]
alloc = ["dharitri-sc-codec/alloc"]
promises = []
managed-map = []
dct-token-payment-legacy-decode = []

[dependencies]
hashbrown = "0.13.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.dharitri-sc-derive]
version = "=0.43.3"
path = "../derive"

[dependencies.dharitri-sc-codec]
version = "=0.18.1"
path = "../../data/codec"
features = ["derive"]
