[package]
name = "dharithri-sc-derive"
version = "0.43.3"
edition = "2021"

authors = ["viswanath <contact@dharithri.org>", "dharithri <contact@dharithri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "dharithri smart contract API procedural macros"
keywords = ["dharithri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "1.0"
hex = "0.4"
radix_trie = "0.2.1"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "dharithri_sc_derive"
proc-macro = true
