[package]
name = "dharitri-sc-derive"
version = "0.43.3"
edition = "2021"

authors = ["viswanath <contact@dharitri.org>", "dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "dharitri smart contract API procedural macros"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "1.0"
hex = "0.4"
radix_trie = "0.2.1"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "dharitri_sc_derive"
proc-macro = true
