[package]
name = "dharithri-sc-scenario"
version = "0.43.3"
edition = "2021"

authors = [
    "viswanath <contact@dharithri.org>",
    "dharithri <contact@dharithri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "dharithri tools for writing and executing scenarios"
keywords = ["dharithri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
base64 = "0.13.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
bech32 = "0.9"
log = "0.4.17"
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.10.3"
colored = "2.0"
clap = { version = "4.1.0", features = ["derive", "cargo"] }
tokio = { version = "1.24", features = ["full"] }

[[bin]]
name = "sc-scenario"
path = "src/main.rs"

[features]
run-go-tests = []

[dependencies.dharithri-sc]
version = "=0.43.3"
path = "../base"

[dependencies.dharithri-sc-meta]
version = "=0.43.3"
path = "../meta"

[dependencies.dharithri-chain-scenario-format]
version = "0.20.0"
path = "../../sdk/scenario-format"

[dependencies.multiversx-chain-vm-executor]
version = "0.1.0"

[dependencies.dharithri-chain-vm]
version = "=0.5.2"
path = "../../vm"

[dependencies.dharithri-sdk]
version = "=0.2.0"
path = "../../sdk/core"
