[package]
name = "dharithri-sc-snippets"
version = "0.43.3"
edition = "2021"

authors = ["dharithri <contact@dharithri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "dharithri framework for building smart contract interaction snippets"
keywords = ["dharithri", "blockchain", "contract", "snippets"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tokio = { version = "1.24", features = ["full"] }
hex = "0.4"
base64 = "0.13.0"
log = "0.4.17"
env_logger = "0.8.4"
futures = "0.3"

[dependencies.dharithri-sc-scenario]
version = "=0.43.3"
path = "../scenario"

[dependencies.dharithri-sdk]
version = "=0.2.0"
path = "../../sdk/core"
