[package]
name = "dharithri-sc-wasm-adapter"
version = "0.43.3"
edition = "2021"

authors = [
    "viswanath <contact@dharithri.org>",
    "dharithri <contact@dharithri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "dharithri WebAssembly VM API wrapper"
keywords = ["dharithri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.dharithri-sc]
version = "=0.43.3"
path = "../base"
