[package]
name = "dharitri-sc-wasm-adapter"
version = "0.43.3"
edition = "2021"

authors = [
    "viswanath <contact@dharitri.org>",
    "dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/mx-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.dharitri-sc]
version = "=0.43.3"
path = "../base"
