[package]
name = "dharithri-chain-scenario-format"
version = "0.20.0"
edition = "2021"

authors = ["viswanath <contact@dharithri.org>", "dharithri <contact@dharithri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharithri/mx-sdk-rs"
homepage = "https://dharithri.com/"
documentation = "https://docs.dharithri.com/"
description = "Parser/writer of the dharithri transaction scenario format"
keywords = ["dharithri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.9"
bech32 = "0.9.0"
