[package]
name = "crowdfunding-esdt"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharithri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/crowdfunding_esdt.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
