[package]
name = "crypto-zombies"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharithri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
