[package]
name = "digital-cash"
version = "0.0.0"
authors = [ "Valentin Craciun"]
edition = "2021"
publish = false

[lib]
path = "src/digital_cash.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
