[package]
name = "multisig"
version = "1.0.0"
authors = ["viswanath <contact@dharithri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dependencies.dharithri-sc-modules]
version = "0.43.3"
path = "../../../contracts/modules"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"

[dev-dependencies.dharithri-wegld-swap-sc]
version = "0.43.3"
path = "../../core/wegld-swap"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
