[package]
name = "rewards-distribution"
version = "0.0.0"
authors = ["kasi <contact@dharithri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/rewards_distribution.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dependencies.dharithri-sc-modules]
version = "0.43.3"
path = "../../../contracts/modules"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
