[package]
name = "big-float-features"
version = "0.0.0"
authors = ["viswanath <contact@dharithri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/big_float_main.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"

[dev-dependencies.esdt-system-sc-mock]
path = "../esdt-system-sc-mock"
