[package]
name = "formatted-message-features"
version = "0.0.0"
authors = [ "you",]
edition = "2021"
publish = false

[lib]
path = "src/formatted_message_features.rs"

[dependencies.dharithri-sc]
version = "0.43.3"
path = "../../../framework/base"

[dev-dependencies.dharithri-sc-scenario]
version = "0.43.3"
path = "../../../framework/scenario"
